MDEV-20842 Crash using versioning plugin functions after plugin was removed from server

Remove plugin functions via item_create_remove() at deinit time.